# biip

./: .gitignore  .readthedocs.yml  .tool-versions  README.md  README.rst  conftest.py  mkdocs.yml  noxfile.py  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  release.yml  tests.yml
docs/: api.rst  changes.rst  conf.py  features.md  index.md  index.rst  quickstart.md  quickstart.rst  requirements.txt  upgrading.md
docs/api/: biip.md  biip.rst  checksums.md  gln.md  gln.rst  gs1-checksums.md  gs1-checksums.rst  gs1.md  gs1.rst  gs1_application_identifiers.md  gs1_digital_link_uris.md  gs1_element_strings.md  gs1_messages.md  gs1_prefixes.md  gs1_web_uris.md  gtin.md  gtin.rst  rcn.md  sscc.md  sscc.rst  symbology.md  symbology.rst  upc.md  upc.rst
docs/getting-started/: deep-dive.md  error-handling.md  gs1-digital-links.md  gs1-messages.md  gtin.md  index.md  parsing.md  rcn.md  symbology-identifiers.md
docs/javascript/: readthedocs.js
docs/reference/: checksums.md  gln.md  gs1_element_strings.md  gs1_messages.md  gs1_prefixes.md  rcn.md  sscc.md  upc.md
docs/upgrading/: index.md  v2.md  v3.md  v4.md  v5.md
extra/: download_gs1_ai.py
scripts/: download_gs1_ai.py  download_gs1_company_prefixes.py  download_gs1_prefixes.py
src/biip/: __init__.py  _config.py  _exceptions.py  _parser.py  _typing.py  checksums.py  gln.py  gs1.py  gs1_ai.json  gs1_ai.py  gs1_check_digit.py  gs1_digital_link_uris.py  gs1_element_strings.py  gs1_messages.py  gs1_prefixes.py  gs1_web_uris.py  gtin.py  rcn.py  sscc.py  symbology.py  upc.py
src/biip/gs1/: __init__.py  _application_identifiers.json  _application_identifiers.py  _company_prefix_trie.json.lzma  _element_strings.py  _elements.py  _messages.py  _prefix_ranges.json  _prefixes.py  _symbology.py  checksums.py
src/biip/gs1_application_identifiers/: __init__.py  _application_identifiers.json
src/biip/gs1_messages/: __init__.py  _element_strings.py  _messages.py
src/biip/gs1_prefixes/: __init__.py  _company_prefix_trie.json.lzma  _prefix_ranges.json  _prefix_trie.json.lzma
src/biip/gtin/: __init__.py  _enums.py  _gtin.py  _rcn.py
tests/: test_biip.py  test_checksums.py  test_gln.py  test_gs1_ai.py  test_gs1_application_identifiers.py  test_gs1_check_digit.py  test_gs1_digital_link_uris.py  test_gs1_element.py  test_gs1_element_strings.py  test_gs1_messages.py  test_gs1_prefixes.py  test_gs1_web_uris.py  test_gtin.py  test_parse.py  test_sscc.py  test_symbology.py  test_upc.py
tests/gs1/: test_application_identifiers.py  test_checksums.py  test_element_strings.py  test_elements.py  test_messages.py  test_parse.py  test_prefixes.py  test_symbology.py
tests/gs1_messages/: test_element_strings.py  test_messages.py
tests/gtin/: test_encode.py  test_parse.py  test_rcn.py  test_rcn_rules.py  test_without_variable_measure.py
tests/rcn/: test_rcn.py  test_rules.py  test_without_variable_measure.py
tests/upc/: test_encode.py  test_parse.py
