[project]
name = "biip"
version = "3.5.2"
description = "Biip interprets the data in barcodes."
authors = [{ name = "Stein Magnus Jodal", email = "stein.magnus@jodal.no" }]
requires-python = ">=3.9"
readme = "README.md"
license = "Apache-2.0"
keywords = ["barcodes", "ean", "isbn", "gs1", "gtin", "upc"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
money = ["py-moneyed>=0.8"]

[project.urls]
Homepage = "https://github.com/jodal/biip"
Repository = "https://github.com/jodal/biip"
Documentation = "https://biip.readthedocs.io"

[dependency-groups]
darglint = ["darglint>=1.8.1"]
dev = [
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "nox>=2024.10.9",
    "py-moneyed~=3.0",
    "types-beautifulsoup4>=4.12.0.6,<5",
    { include-group = "darglint" },
    { include-group = "docs" },
    { include-group = "mypy" },
    { include-group = "pyright" },
    { include-group = "ruff" },
    { include-group = "tests" },
]
docs = ["sphinx>=7", "sphinx-rtd-theme>=2", "sphinx-autodoc-typehints>=2"]
mypy = ["mypy==1.15.0"]
pyright = ["pyright==1.1.394"]
ruff = ["ruff==0.9.6"]
tests = [
    "coverage>=7.6.12",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "xdoctest>=1.2.0",
]


[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["biip"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
fail_under = 100
show_missing = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--xdoc"
filterwarnings = ["ignore:pygments is not installed.*:UserWarning"]


[tool.mypy]
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "biip.*"
disallow_untyped_defs = true


[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "strict"
# Already covered by tests and careful import ordering:
reportImportCycles = false
# Already covered by flake8-self:
reportPrivateUsage = false


[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "PLR2004", # magic-value-comparison
    "S101",    # assert
    #
    # These rules interfere with `ruff format`
    "COM812", # missing-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
]

[tool.ruff.lint.per-file-ignores]
"docs/*" = [
    "INP001", # implicit-namespace-package
]
"scripts/*" = [
    "INP001", # implicit-namespace-package
    "T201",   # print
]
"tests/*" = [
    "D",    # pydocstyle
    "S101", # assert
]

[tool.ruff.lint.isort]
known-first-party = ["biip"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
