[project]
name = "biip"
version = "4.0.0"
description = "Biip interprets the data in barcodes."
authors = [{ name = "Stein Magnus Jodal", email = "stein.magnus@jodal.no" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
keywords = ["barcodes", "ean", "isbn", "gs1", "gtin", "upc"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typing-extensions>=4.1; python_version<'3.11'"
]

[project.optional-dependencies]
money = ["py-moneyed>=0.8"]

[project.urls]
Homepage = "https://github.com/jodal/biip"
Repository = "https://github.com/jodal/biip"
Documentation = "https://biip.readthedocs.io"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "biip[money]",
    "tox>=4.21.2",
    "tox-uv>=1.23.2",
    { include-group = "docs" },
    { include-group = "mypy" },
    { include-group = "pyright" },
    { include-group = "ruff" },
    { include-group = "tests" },
    { include-group = "scripts" },
]
docs = [
    "mkdocs-material>=9.4",
    "mkdocstrings[python]>=0.24",
    { include-group = "ruff" },
]
mypy = ["mypy==1.15.0"]
pyright = ["basedpyright>=1.31.7"]
ruff = ["ruff==0.11.2"]
scripts = [
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "types-beautifulsoup4>=4.12.0.20250204",
]
tests = [
    "coverage>=7.6.12",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "rich>=13.9.4",
]


[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
# Already covered by tests and careful import ordering:
reportImportCycles = false
# Already covered by flake8-self:
reportPrivateUsage = false


[tool.coverage.paths]
source = ["src/", "*/site-packages/"]

[tool.coverage.run]
branch = true
source_pkgs = ["biip"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "def __rich_repr__"]
fail_under = 100
show_missing = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules"
doctest_optionflags = ["NORMALIZE_WHITESPACE"]
filterwarnings = ["ignore:pygments is not installed.*:UserWarning"]


[tool.mypy]
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "biip.*"
disallow_untyped_defs = true


[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = [
    "ALL",
    #
    # Preview rules
    "DOC201", # docstring-missing-returns
    "DOC202", # docstring-extraneous-returns
    "DOC402", # docstring-missing-yields
    "DOC403", # docstring-extraneous-yields
    "DOC501", # docstring-missing-exception
    "UP045",  # non-pep604-annotation-optional
]
ignore = [
    "PLR2004", # magic-value-comparison
    "S101",    # assert
    #
    # These rules interfere with `ruff format`
    "COM812", # missing-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
]

[tool.ruff.lint.per-file-ignores]
"docs/*" = [
    "INP001", # implicit-namespace-package
]
"scripts/*" = [
    "INP001", # implicit-namespace-package
    "T201",   # print
]
"tests/*" = [
    "D",    # pydocstyle
    "S101", # assert
]

[tool.ruff.lint.pydoclint]
ignore-one-line-docstrings = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true


[tool.tox]
env_list = [
    "3.10",
    "3.11",
    "3.12",
    "3.13",
    "3.14",
    "docs",
    "mypy",
    "pyright",
    "ruff-format",
    "ruff-check",
]

[tool.tox.env_run_base]
package = "wheel"
wheel_build_env = ".pkg"
dependency_groups = ["tests"]
extras = ["money"]
commands = [
    [
        "pytest",
        "--cov",
        "--basetemp={envtmpdir}",
        "tests",                                # unit tests
        "{envsitepackagesdir}/biip",            # doctests
        { replace = "posargs", extend = true },
    ],
]

[tool.tox.env.docs]
dependency_groups = ["docs"]
extras = ["money"]
commands = [["mkdocs", "build", "--site-dir={envtmpdir}"]]

[tool.tox.env.mypy]
dependency_groups = ["scripts", "tests", "mypy"]
extras = ["money"]
commands = [
    [
        "mypy",
        { replace = "posargs", default = [
            "src",
            "tests",
        ], extend = true },
    ],
]

[tool.tox.env.pyright]
dependency_groups = ["scripts", "tests", "pyright"]
extras = ["money"]
commands = [
    [
        "basedpyright",
        "--venvpath",
        "{envdir}",
        { replace = "posargs", default = [
            "src",
            "tests",
        ], extend = true },
    ],
]

[tool.tox.env.ruff-format]
skip_install = true
dependency_groups = ["ruff"]
commands = [["ruff", "format", "--check", "{posargs:.}"]]

[tool.tox.env.ruff-check]
skip_install = true
dependency_groups = ["ruff"]
commands = [["ruff", "check", "{posargs:.}"]]
